--- a/student/templates/create_student.html
+++ b/student/templates/create_student.html
@@ -38,7 +38,7 @@
             </div>
         {% else %}
             <div class="form-group">
-                <label for="middle_name" class="control-label">Last name</label>
+                <label for="middle_name" class="control-label">Middle name</label>
                 <input class="form-control" placeholder="middle name" name="middle_name" {% if form.middle_name.value %} value="{{ form.middle_name.value }}" {% endif %}>
             </div>
         {% endif %}
