--- a/templates/registration/success_registration.html
+++ b/templates/registration/success_registration.html
@@ -31,10 +31,10 @@
         <div class="footer-mine">
             <div class="col-md-2"></div>
             <div class="col-md-4">
-                <span>Created by:</span><a class="footer-mine" href="https://ua.linkedin.com/in/dianagafonova">Diana Agafonova</a>
+                <span>Powered by: </span><a href="https://ua.linkedin.com/in/dianagafonova">Diana Agafonova</a>
             </div>
             <div class="col-md-4">
-                <span>GitHub:</span><a class="footer-mine" href="https://github.com/DiankaDS/university">university</a>
+                <span>GitHub: </span><a href="https://github.com/DiankaDS/university">university</a>
             </div>
             <div class="col-md-2"></div>
         </div>
