--- a/group/templates/groups_list.html
+++ b/group/templates/groups_list.html
@@ -18,7 +18,11 @@
                 <tr class="active">
                     <td><a href='{% url 'groups:info' group.id %}'>{{ group.group_name }}</a></td>
                     <td>{{ group.student_set.count }}</td>
-                    <td>{{ group.elder }}</td>
+                    {% if group.elder %}
+                        <td>{{ group.elder }}</td>
+                    {% else %}
+                        <td>-</td>
+                    {% endif %}
                 </tr>
             {% endfor %}
             </table>
