--- a/student/templates/students_list.html
+++ b/student/templates/students_list.html
@@ -16,7 +16,7 @@
             {% for student in object_list %}
                 <tr class="active">
                     <td>{{ student.student_id }}</td>
-                    <td><a href="{% url 'students:info' student.id %}">{{ student.first_name }} {{ student.last_name }} {{ student.middle_name }}</a></td>
+                    <td><a href="{% url 'students:info' student.id %}">{{ student.first_name }} {{ student.middle_name }} {{ student.last_name }}</a></td>
                 </tr>
             {% endfor %}
         </table>
