--- a/templates/registration/registration.html
+++ b/templates/registration/registration.html
@@ -27,7 +27,7 @@
         </div>
         <h1 class="label-mine">Registration</h1>
             <div class="form-mine">
-            <form method="post" role="form">{% csrf_token %}
+            <form enctype="multipart/form-data" method="post" role="form">{% csrf_token %}
                 {% if form.username.errors %}
                     <div class="form-group has-error">
                         <label for="username" class="control-label">Username</label>
@@ -97,10 +97,10 @@
         <div class="footer-mine">
             <div class="col-md-2"></div>
             <div class="col-md-4">
-                <span>Created by:</span><a class="footer-mine" href="https://ua.linkedin.com/in/dianagafonova">Diana Agafonova</a>
+                <span>Powered by: </span><a href="https://ua.linkedin.com/in/dianagafonova">Diana Agafonova</a>
             </div>
             <div class="col-md-4">
-                <span>GitHub:</span><a class="footer-mine" href="https://github.com/DiankaDS/university">university</a>
+                <span>GitHub: </span><a href="https://github.com/DiankaDS/university">university</a>
             </div>
             <div class="col-md-2"></div>
         </div>
